tests/paczka2/big_fuzzy/40637447.err
Error in line 1: Am6Ez03 A766 39,3
Error in line 23: F3w4hj A997 80,1
Error in line 21: gCRfnmoo A461 44,0
Error in line 28: tIriwSngSby A997 95,8
Error in line 38: UrUsw8ZHgq S416 -1,7
Error in line 43: A997 A766 59,97
Error in line 55: 5tSjl A766 58,8
Error in line 85: UrUsw8ZHgq A461 7,r
Error in line 72: gCRfnmoo A461 75,8
Error in line 96: F3w4hj A461 14,5
Error in line 103: A997 S416 9,3
Error in line 107: 5tSjl A461 50,7
Error in line 112: 5tSjl A766 59,1
Error in line 139: Am6Ez03 A461 28,6
Error in line 152: gCRfnmoo S416 79,3
Error in line 159: gCRfnmoo A997 56,9
Error in line 151: Am6Ez03 S416 27,7
Error in line 163: F3w4hj A461 96,1
Error in line 168: A997 S416 84,1
Error in line 191: F3w4hj AU66 94,9
Error in line 158: 5tSjl A461 17,2
Error in line 194: F3w4hj A766 49,0
Error in line 205: A997 A766 -2,3
Error in line 204: UrUsw8ZHgq A461 14,8
Error in line 209: F3w4hj S416 82,3
Error in line 222: UrUsw8ZHgq A461 96,2
Error in line 225: UrUsw8ZHgq S416 98,3
Error in line 230: tIriwSngSby S416 2,6
Error in line 233: tIriwSngSby A997 302,9
Error in line 218: A997 A766 304,1
Error in line 246: A997 A997 89,8
